--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "recharts": "^2.10.3",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
     "sqlite3": "^5.1.6",
