--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "highlight.js": "^11.9.0",
     "interweave": "^13.1.0",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.11",
+    "prism-themes": "^1.9.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroller": "^1.2.6",
@@ -25,6 +28,7 @@
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-simple-code-editor": "^0.13.1",
     "recharts": "^2.10.3",
     "socket.io": "^4.7.0",
     "socket.io-client": "^4.7.0",
