--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rome-admin",
+  "name": "community-shield-portal",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,10 @@
     "highlight.js": "^11.9.0",
     "interweave": "^13.1.0",
     "jsonwebtoken": "^9.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.45",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.11",
     "prism-themes": "^1.9.0",
