--- a/src/config.json
+++ b/src/config.json
@@ -2,6 +2,6 @@
     "baseUrl": "https://spartaportal.communityshield.app",
     "baseApiUrl": "https://spartaportal.communityshield.app/api",
     "staffGroupID": 13689334,
-    "communityName": "Sparta",
+    "communityName": "Test",
     "communityLink": "https://www.roblox.com/groups/13689334/rt#!/about"
 }
