--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "community-shield-portal",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jack-g-coms.github.io/online-admin-portal",
   "dependencies": {
     "@supercharge/strings": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -13,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "gh-pages": "^6.3.0",
     "highlight.js": "^11.9.0",
     "interweave": "^13.1.0",
     "jsonwebtoken": "^9.0.0",
@@ -42,6 +44,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run start",
+    "deploy": "gh-pages -d build",
     "start": "concurrently \"react-scripts start\" \"node server/init.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
