--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,7 @@
 {
-    "baseUrl": "https://spartaportal.communityshield.app",
-    "baseApiUrl": "https://spartaportal.communityshield.app/api",
-    "staffGroupID": 13689334,
+    "baseUrl": "https://jack-g-coms.github.io/online-admin-portal",
+    "baseApiUrl": "https://testportal.communityshield.app/api",
+    "staffGroupID": 6124305,
     "communityName": "Test",
-    "communityLink": "https://www.roblox.com/groups/13689334/rt#!/about"
+    "communityLink": "https://www.roblox.com/communities/6124305/The-Roman-Empire#!/about"
 }
