--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,5 @@
 {
-    "baseUrl": "https://jack-g-coms.github.io/online-admin-portal",
+    "baseUrl": "https://testportal.communityshield.app",
     "baseApiUrl": "https://testportal.communityshield.app/api",
     "staffGroupID": 6124305,
     "communityName": "Test",
